--- a/docker-images/Dockerfile
+++ b/docker-images/Dockerfile
@@ -1,4 +1,4 @@
-From centos:centos7
+From mysql:5.7
 RUN yum install -y wget java
 
 RUN wget -P /opt ftp://ftp:ftp@10.186.18.20/actiontech-dble/qa/9.9.9.9/actiontech-dble.tar.gz && \
@@ -6,7 +6,7 @@ RUN wget -P /opt ftp://ftp:ftp@10.186.18.20/actiontech-dble/qa/9.9.9.9/actiontec
     wget https://raw.githubusercontent.com/sunsun314/dble/btrace-add/docker-images/conf/schema.xml -P /opt/dble/conf/ && \
     wget https://raw.githubusercontent.com/sunsun314/dble/btrace-add/docker-images/conf/server.xml -P /opt/dble/conf/ && \
     wget https://raw.githubusercontent.com/sunsun314/dble/btrace-add/docker-images/conf/wrapper.conf -P /opt/dble/conf/ && \
-    wget https://raw.githubusercontent.com/sunsun314/dble/btrace-add/docker-images/conf/docker_init_start.sh -P /opt/dble/conf/
+    wget https://raw.githubusercontent.com/sunsun314/dble/btrace-add/docker-images/conf/docker_init_start.sh -P /opt/dble/bin/
 
 VOLUME /opt/dble
 
