--- a/docker-images/Dockerfile
+++ b/docker-images/Dockerfile
@@ -1,13 +1,14 @@
-From mysql:5.7
-RUN yum install -y wget java
+From centos:centos7
+RUN yum install -y wget java mysql
 
 RUN wget -P /opt ftp://ftp:ftp@10.186.18.20/actiontech-dble/qa/9.9.9.9/actiontech-dble.tar.gz && \
     tar zxvf /opt/actiontech-dble.tar.gz -C /opt && \
     wget https://raw.githubusercontent.com/sunsun314/dble/btrace-add/docker-images/conf/schema.xml -P /opt/dble/conf/ && \
     wget https://raw.githubusercontent.com/sunsun314/dble/btrace-add/docker-images/conf/server.xml -P /opt/dble/conf/ && \
     wget https://raw.githubusercontent.com/sunsun314/dble/btrace-add/docker-images/conf/wrapper.conf -P /opt/dble/conf/ && \
-    wget https://raw.githubusercontent.com/sunsun314/dble/btrace-add/docker-images/conf/docker_init_start.sh -P /opt/dble/bin/
+    wget https://raw.githubusercontent.com/sunsun314/dble/btrace-add/docker-images/conf/docker_init_start.sh -P /opt/dble/bin/ && \
+    chmod 777 /opt/dble/bin/docker_init_start.sh
 
 VOLUME /opt/dble
 
-CMD ["/opt/dble/bin/docker_init_start.sh", "daemon off;"]
+CMD ["/opt/dble/bin/docker_init_start.sh", "/bin/bash"]
