--- a/docker-images/Dockerfile
+++ b/docker-images/Dockerfile
@@ -13,4 +13,4 @@ RUN wget -P /opt ftp://ftp:ftp@10.186.18.20/actiontech-dble/qa/9.9.9.9/actiontec
 
 VOLUME /opt/dble
 
-CMD ["/opt/dble/bin/docker_init_start.sh", "/bin/bash"]
+CMD ["/opt/dble/bin/docker_init_start.sh"]
