--- a/pom.xml
+++ b/pom.xml
@@ -265,7 +265,15 @@
             <version>1.2</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.jaegertracing</groupId>
+            <artifactId>jaeger-client</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
+
+
 
     <build>
         <!-- finalName>${artifactId}-${version}-${buildNumber}</finalName -->
